[package]
name = "Techceleration-BreakTheCode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poi"
path = "src/categorize_poi/main.rs"

[[bin]]
name = "contributors"
path = "src/contributors/main.rs"

[[bin]]
name = "news"
path = "src/news/main.rs"

[[bin]]
name = "words"
path = "src/words/main.rs"

[dependencies]
clap = {version = "~4.0.13", features = ["derive"]}
serde = {version = "~1.0.145", features = ["derive"]}
serde_json = "~1.0.86"
reqwest = {version = "~0.11.12", features = ["json"]}
tokio = {version = "~1.21.2", features = ["macros", "rt-multi-thread"]}
geoutils = "0.5.1"
eyre = "~0.6.8"
cli-table = "~0.4.7"
dialoguer = "~0.10.2"
itertools = "~0.10.5"